--- a/styles/style.css
+++ b/styles/style.css
@@ -127,7 +127,7 @@ button{
 
 header{
     height: 8.125rem;
-    box-shadow: inset 0 -0.375rem 0 red;
+    box-shadow: inset 0 -0.375rem 0 #1e1e1e;
     background-color: #292929;
 }
 
